SUBDIRS = src include doc_example
ACLOCAL_AMFLAGS = -I m4

pcfiles = libixion-@IXION_API_VERSION@.pc

pkgconfig_DATA = $(pcfiles)
pkgconfigdir = $(libdir)/pkgconfig

bin_data = \
	bin/gen-gfm-release-table.sh \
	bin/gen-spirv-shader-arrays.py \
	bin/run-python-test-osx.sh \
	bin/run-python.sh

test_data = \
	test/01-simple-arithmetic.txt \
	test/02-circular-01.txt \
	test/02-circular-02.txt \
	test/03-expression.txt \
	test/04-function-logical.txt \
	test/04-function-single.txt \
	test/04-function-average.txt \
	test/05-range-reference.txt \
	test/06-range-reference-basic-01.txt \
	test/06-range-reference-basic-02.txt \
	test/06-range-reference-circular-01.txt \
	test/07-fraction-numbers.txt \
	test/08-numeric-cells.txt \
	test/09-string-cells.txt \
	test/10-shared-formulas-01.txt \
	test/11-reference-to-numeric-cell-01.txt \
	test/12-inline-string-01.txt \
	test/13-relational-operators-01.txt \
	test/13-relational-operators-02.txt \
	test/13-relational-operators-03.txt \
	test/python/document.py \
	test/python/module.py \
	test/thread/function-parallel.txt \
	test/thread/function-wait-simple.txt \
	test/parser-test-func.sh \
	test/parser-test-t0.sh \
	test/parser-test-t1.sh \
	test/parser-test-t2.sh \
	test/parser-test-t3.sh \
	test/parser-test-t4.sh \
	test/parser-test-t5.sh \
	test/parser-test-t6.sh \
	test/parser-test-t7.sh \
	test/parser-test-t8.sh

doc_data = \
	doc/conf.py \
	doc/doxygen.conf \
	doc/overview/index.rst \
	doc/cpp/data_store/types.rst \
	doc/cpp/data_store/model_context.rst \
	doc/cpp/data_store/index.rst \
	doc/cpp/data_store/cell_access.rst \
	doc/cpp/data_store/document.rst \
	doc/cpp/data_store/dirty_cell_tracker.rst \
	doc/cpp/formula/types.rst \
	doc/cpp/formula/formula_tokens.rst \
	doc/cpp/formula/formula_cell.rst \
	doc/cpp/formula/formula_engine.rst \
	doc/cpp/formula/index.rst \
	doc/cpp/formula/formula_name_resolver.rst \
	doc/cpp/index.rst \
	doc/cpp/interface/index.rst \
	doc/cpp/quickstart/using_model_context.rst \
	doc/cpp/quickstart/index.rst \
	doc/cpp/quickstart/using_document.rst \
	doc/index.rst \
	doc/python/quickstart.rst \
	doc/python/index.rst \
	doc/python/document.rst \
	doc/python/sheet.rst

EXTRA_DIST = \
	LICENSE \
	libixion.pc.in \
	autogen.sh \
	$(bin_data) \
	$(test_data) \
	$(doc_data)

.PHONY: distclean-local dist-hook doc-doxygen doc-sphinx doc

distclean-local:
	rm -rf *.pc

dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/missing --run git log --pretty=medium ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi

doc-doxygen:
	@echo "Building documentation by doxygen..."
	@cd doc && doxygen doxygen.conf

doc-sphinx:
	@echo "Building documentation by sphinx..."
	@sphinx-build -b html ./doc/ ./doc/_build

doc: doc-doxygen doc-sphinx

