libixiondir = $(includedir)/libixion-@IXION_API_VERSION@/ixion
libixion_HEADERS = cell.hpp \
	cell_queue_manager.hpp \
	depends_tracker.hpp \
	depth_first_search.hpp \
	formula_functions.hpp \
	formula_interpreter.hpp \
	formula_lexer.hpp \
	formula_name_resolver.hpp \
	formula_parser.hpp \
	formula_result.hpp \
	formula_tokens.hpp \
	global.hpp \
	lexer_tokens.hpp \
	mem_str_buf.hpp \
	model_parser.hpp \
	sort_input_parser.hpp \
	thread.hpp
