SUBDIRS = interface

libixiondir = $(includedir)/libixion-@IXION_API_VERSION@/ixion
libixion_HEADERS = \
	address.hpp \
	cell.hpp \
	cell_listener_tracker.hpp \
	cell_queue_manager.hpp \
	column_store_type.hpp \
	config.hpp \
	depth_first_search.hpp \
	env.hpp \
	exceptions.hpp \
	formula_function_opcode.hpp \
	formula.hpp \
	formula_lexer.hpp \
	formula_name_resolver.hpp \
	formula_opcode.hpp \
	formula_parser.hpp \
	formula_result.hpp \
	formula_tokens.hpp \
	global.hpp \
	info.hpp \
	lexer_tokens.hpp \
	macros.hpp \
	matrix.hpp \
	mem_str_buf.hpp \
	model_context.hpp \
	table.hpp \
	types.hpp
