SUBDIRS = interface

libixiondir = $(includedir)/libixion-@IXION_API_VERSION@/ixion
libixion_HEADERS = \
	address.hpp \
	address_iterator.hpp \
	cell.hpp \
	cell_listener_tracker.hpp \
	column_store_type.hpp \
	compute_engine.hpp \
	config.hpp \
	depth_first_search.hpp \
	env.hpp \
	exceptions.hpp \
	formula_function_opcode.hpp \
	formula.hpp \
	formula_name_resolver.hpp \
	formula_opcode.hpp \
	formula_result.hpp \
	formula_tokens.hpp \
	formula_tokens_fwd.hpp \
	global.hpp \
	info.hpp \
	macros.hpp \
	matrix.hpp \
	mem_str_buf.hpp \
	model_context.hpp \
	module.hpp \
	table.hpp \
	types.hpp
