SUBDIRS = interface

libixiondir = $(includedir)/libixion-@IXION_API_VERSION@/ixion
libixion_HEADERS = \
	address.hpp \
	address_iterator.hpp \
	cell.hpp \
	cell_access.hpp \
	compute_engine.hpp \
	config.hpp \
	dirty_cell_tracker.hpp \
	document.hpp \
	env.hpp \
	exceptions.hpp \
	formula_function_opcode.hpp \
	formula.hpp \
	formula_name_resolver.hpp \
	formula_opcode.hpp \
	formula_result.hpp \
	formula_tokens.hpp \
	formula_tokens_fwd.hpp \
	global.hpp \
	info.hpp \
	macros.hpp \
	matrix.hpp \
	model_context.hpp \
	model_iterator.hpp \
	module.hpp \
	named_expressions_iterator.hpp \
	table.hpp \
	types.hpp
